Cleaned up directory structure

--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
 </head>
 <body>
 
+<table>
+	<tr>
+		<th>Source IP:</th>
+		<td id="ip_src"></td>
+	</tr>
+	<tr>
+		<th>Destination IP:</th>
+		<td id="ip_dst"></td>
+	</tr>
+	<tr>
+		<th>Protocols:</th>
+		<td id="frame_protocols"></td>
+	</tr>
+</table>
+
 <script src="https://d3js.org/d3.v5.js"></script>
-<script src="netd3.js"></script>
+<script src="testcode.js"></script>
 
 
 </body>
