Renamed javascript file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </table>
 
 <script src="https://d3js.org/d3.v5.js"></script>
-<script src="testcode.js"></script>
+<script src="pcap-visualizer.js"></script>
 
 
 </body>
