started moving graph to cytoscape

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 	</tr>
 </table>
 
+<div id="cy"></div>
+
 <script src="https://d3js.org/d3.v5.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.2.11/cytoscape.min.js"></script>
 <script src="pcap-visualizer.js"></script>
 
 
